--- a/code/src/index.css
+++ b/code/src/index.css
@@ -142,6 +142,7 @@ textarea {
 footer {
   margin-top: auto;
   text-align: center;
+  padding: 1rem;
 }
 
 
@@ -158,7 +159,7 @@ footer {
   font-family: 'Space Mono', monospace;
   font-size: 0.8rem;
   color: var(--first);
-  padding: 1rem;
+  margin: 0;
 }
 
 
