--- a/code/src/index.css
+++ b/code/src/index.css
@@ -194,6 +194,7 @@ footer {
   font-family: 'Space Mono', monospace;
 }
 
+.send-button:hover,
 .send-button:active {
   background-color: var(--third);
   color: var(--first);
