--- a/code/src/index.css
+++ b/code/src/index.css
@@ -73,7 +73,7 @@ code {
 form {
   border: 2px solid var(--first);
   width: 90%;
-  height: 200px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
