--- a/code/src/index.css
+++ b/code/src/index.css
@@ -23,7 +23,8 @@ code {
  border: 1px solid black; 
  font-family:Arial, Helvetica, sans-serif;
  box-shadow: 5px 5px ;
- margin:3%;
+ margin-top: 3%;
+ margin-bottom: 3%;
  display: flex;
  flex-direction: column;
  padding-left: 5px;
