--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,11 @@
 :root {
   --clr-white: #fff;
   --clr-black: #000;
-  --clr-accent: #f4acac;
+  --clr-background: #99b3d6;
   --clr-lightgrey: #eaeaea;
   --clr-grey: #818181;
-  --clr-background: #a2b983;
+  --clr-accent: #f4acac;
+  --clr-hover: #0d3cd2;
 }
 
 body {
@@ -44,8 +45,12 @@ main {
 button {
   cursor: pointer;
   border: none;
-  border-radius: 25px;
   color: var(--clr-black);
+  border-radius: 25px;
+}
+
+.emoji {
+  padding: 0 10px;
 }
 
 .characters,
@@ -53,7 +58,7 @@ button {
   color: var(--clr-grey);
 }
 
-/*Thought Form*/
+/*Send Thought*/
 .form-container {
   background-color: var(--clr-lightgrey);
 }
@@ -72,13 +77,85 @@ textarea {
 }
 
 .submit-btn {
+  font-family: "Monaco", monospace;
   background: var(--clr-accent);
-  width: 250px;
+  width: 260px;
   height: 50px;
-  font-size: 1em;
+  box-shadow: 0 0.4em 0.5em 0 var(--clr-grey);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-/*Thought Item*/
+.submit-btn div {
+  transform: translateY(0px);
+  width: 100%;
+}
+
+.submit-btn,
+.submit-btn div {
+  transition: 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.submit-btn div span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+}
+
+.submit-btn div:nth-child(1) {
+  background-color: var(--clr-accent);
+}
+
+.submit-btn div:nth-child(2) {
+  background-color: var(--clr-hover);
+}
+
+.submit-btn:hover {
+  background-color: var(--clr-hover);
+}
+
+.submit-btn:hover div {
+  transform: translateY(-51px);
+}
+
+.submit-btn p {
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--clr-white);
+}
+
+/* .submit-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+transition: all 0.2s;
+
+.submit-btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.submit-btn:after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.submit-btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+} */
+
+/*Thought Message*/
 .thought-container {
   background: var(--clr-white);
   overflow-wrap: break-word;
@@ -90,12 +167,32 @@ textarea {
 
 .like-container {
   display: flex;
+  align-items: center;
 }
 
-.like-btn {
-  background: var(--clr-lightgrey);
+.liked,
+.no-likes {
   width: 50px;
   height: 50px;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+.no-likes {
+  background: var(--clr-lightgrey);
+}
+
+.no-likes:hover,
+.no-likes:active {
+  -webkit-transform: translate(0px, 5px);
+  -ms-transform: translate(0px, 5px);
+  transform: translate(0px, 5px);
+  border-bottom: 3px solid var(--clr-grey);
+  background-color: var(--clr-accent);
+}
+
+.liked {
+  background-color: var(--clr-accent);
 }
 
 .like-counter {
