--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,136 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  box-sizing: border-box;
+  margin: 25px 0 0 0;
+  font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: linear-gradient(263deg, #c35ed9, #f31ecf, #f3331e, #1e3ff3, #1ef38d);
+  background-size: 1000% 1000%;
+
+  -webkit-animation: AnimationName 13s ease infinite;
+  -moz-animation: AnimationName 13s ease infinite;
+  animation: AnimationName 20s ease infinite;
 }
+
+@keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+  /* background: linear-gradient(-60deg, #e766f3, #f14579, #88e0f7, #5dffc9);
+    background-size: 400% 400%;
+    animation: gradient 8s ease infinite;
+
+    
+
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    } */
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.message-send-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  
+}
+
+
+.message-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 20px 0;
+  width: 270px;
+  padding: 10px 35px;
+  background-color: rgb(233, 233, 233);
+  border: 2px solid black;
+  box-shadow: 5px 5px 0 0;
+}
+
+.message-label {
+  padding-bottom: 10px;
+}
+
+.message-area {
+  width: 100%;
+  height: 70px;
+  resize: none;
+}
+
+.send-btn {
+ font-family: 'Inconsolata', monospace;
+ height: 30px;
+ border-radius: 20px;
+ margin-top: 10px;
+ border: transparent;
+ background-color: pink;
+ cursor: pointer;
+}
+
+
+/* SENT MESSAGES */
+
+/* .sent-message-big-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+
+.sent-message-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 20px 0;
+  width: 270px;
+  padding: 10px 35px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  box-shadow: 5px 5px 0 0;
+
+}
+
+.like-counter-section {
+  display: flex;
+}
+
+
+/* .sent-message-text {
+  resize: none;
+  margin-bottom: 20px;
+} */
+
+.like-btn {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 20px;
+  border: none;
+  background-color: pink;
+  cursor: pointer;
 }
