--- a/code/src/index.css
+++ b/code/src/index.css
@@ -50,8 +50,8 @@ code {
 .liked-button {
   background-color: pink;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border: 1px solid white;
   align-content: center;
   margin-top: 50px;
@@ -59,8 +59,8 @@ code {
 .like-button {
   background-color: #99959552;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border: 1px solid white;
   align-content: center;
   margin-top: 50px;
@@ -74,4 +74,7 @@ code {
 .time-created {
   margin-left: 10rem;
   margin-top: -20px;
+}
+.hearts {
+  font-size: 22px;
 }
