--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,111 @@
 body {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Trispace", sans-serif;
+  background-color: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.main-container {
+  padding: 0 15px;
+  box-sizing: border-box;
+  width: 400px;
+  margin: 0 auto;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.card {
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 1px solid #000;
+  margin: 20px 0;
+  padding: 15px;
+  box-shadow: 7px 7px;
+  overflow-wrap: break-word;
+}
+
+.card p {
+  margin: 0;
+}
+
+.form {
+  background-color: #e4e4e4;
+}
+
+textarea {
+  margin: 15px 0 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.submit-button {
+  border: none;
+  border-radius: 20px;
+  background-color: #ffadad;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.form p {
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+}
+
+.thought-message {
+  margin: 0;
+  padding: 10px 0;
+  min-height: 40px;
+}
+
+.likes,
+.button-card {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.likes {
+  justify-content: space-between;
+}
+
+.like-button {
+  margin-right: 10px;
+  border: none;
+  border-radius: 50%;
+  height: 38px;
+  width: 38px;
+}
+
+.date {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.3);
+  text-align: right;
+  padding-bottom: 17px;
+}
+
+/*---- MEDIA QUERIES ----*/
+
+@media (min-width: 768px) {
+  .main-container {
+    width: 450px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main-container {
+    width: 500px;
+  }
 }
