--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inconsolata', monospace;
+  font-size: 16px;
+  font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 code {
@@ -18,11 +18,12 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 65vw;
+  width: 100%;
   margin: auto;
 }
 
 .thoughts-container {
+  width: 65vw;
 }
 
 .thoughts-message {
