--- a/code/src/components/SendMessageCard.css
+++ b/code/src/components/SendMessageCard.css
@@ -6,33 +6,39 @@
   box-shadow: 7px 7px black;
   width: 95%;
   padding: 16px;
-  margin: 30px auto 0 auto;
+  margin: 40px auto 0 auto;
 }
 
 .message-question {
   font-size: 16px;
   font-weight: 500;
-  margin: 10px 0;
 }
 
 .message-input {
   box-sizing: border-box;
-  margin: 10px 0;
+  margin-top: 10px;
   width: 100%;
   min-height: 35px;
   padding: 10px;
   resize: vertical;
+  border-radius: 5px;
+}
+
+.message-input-count {
+  font-size: 16px;
+  color: grey;
+  text-align: right;
 }
 
 .message-send-button {
   color: inherit;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
   background-color: rgb(255, 173, 173, 1);
   border: none;
   border-radius: 50px;
   padding: 7px 17px;
-  margin: 10px 0;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
