--- a/code/src/index.css
+++ b/code/src/index.css
@@ -61,11 +61,15 @@ form {
 }
 
 button {
-  border-radius: 50%;
   border: none;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
-  background-color: pink;
+  background-color: var(---buttons);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button:hover {
