--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,10 +12,112 @@ code {
     monospace;
 }
 
-.card{
-  background-color: grey;
+
+h1{ 
+font-size: 13px;
+}
+
+.greetingcard{
+  display:flex;
+  flex-direction: column;
+  align-items:flex-start ;
+  background-color: lightgrey;
   width: 400px;
   margin: 20px auto;
-  padding: 30px;
+  padding: 20px;
+  box-shadow: 10px 10px  black;
+  border: 2px solid;
+}
+
+.card{
+  background-color: white;
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 10px 10px  black;
+  border: 2px solid;
+  margin-top: 50px;
+}
+
+textarea {
+  padding: 10px;
+  width:300px;
+  line-height: 1.5;
+  border-radius: 5px;
+  border: 1px solid rgb(235, 190, 241);
+  box-shadow: 1px 1px 1px #999;
+}
+.text-likes{
+  display: flex;
+}
+
+.load{
+  text-align: center;
+
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+
+.button {
+  margin-top: 15px;
+  margin-bottom: 15px;;
+  padding: 0.6em 1.2em;
+  font-size: 13px;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: rgb(211, 136, 194);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+ }
+ 
+ .button:hover {
+  background-color: #f16073;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+ }
+ 
+ .button:active {
+  transform: translateY(-1px);
+ }
+
+
+.likes{
+display:flex; 
+flex-direction: row; 
+align-items:center; 
+justify-content: space-between;}
+
+.like-button{ 
+cursor:pointer;
+background-color: #f4def5; 
+width: 40px;
+height: 40px;
+border-radius: 50px; 
+border: 0; 
+margin-right: 5px;}
+
+.red-likebutton{
+cursor:pointer;
+background-color: rgb(211, 136, 194);
+border: 0; width: 40px;;
+height: 40px; 
+border-radius: 50px;  
+margin-right: 5px;
+}
+
+.heartandlikes{
+display:flex; 
+align-items:center
 }
 
