--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,7 +30,7 @@ body {
 }
 
 .incorrect-number-of-characters {
-  color: red;
+  color: rgb(243, 71, 71);
 }
 
 .correct-number-of-characters {
@@ -38,7 +38,7 @@ body {
 }
 
 button {
-  border-radius: 15px;
+  border-radius: 27px;
   background-color: rgb(245, 169, 169);
   border: none;
   padding: 7px 12px;
