--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,64 @@
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+form, .thought-container{ 
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: rgb(209, 205, 205);
+  border: 1px solid #000;
+  margin: 1rem auto;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+
+[type='submit'] {
+  margin: 1em 0 1em 0;
+  border-radius: 1em;
+  padding: 5px 20px;
+}
+
+textarea {
+  border: 1px solid #000;
+}
+
+.thoughttext-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.like-wrapper {
+  align-self: center;
+}
+
+.likes-count {
+  margin-left: 0.5rem;
+}
+
+.date {
+  font-size: small;
+}
+
+
+@media (min-width: 375px) and (max-width: 667px) {
+  form, .thought-container {
+    width: 375px;
+  }
+
+  
+}
+
+@media screen and (min-width: 668px) {
+  form, .thought-container {
+    width: 500px;
+  }
+
+  
 }
