--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /* animated background */
+
   background: linear-gradient(263deg, #c35ed9, #f31ecf, #f3331e, #1e3ff3, #1ef38d);
   background-size: 1000% 1000%;
 
@@ -28,25 +30,6 @@ body {
   50%{background-position:100% 50%}
   100%{background-position:0% 50%}
 }
-  /* background: linear-gradient(-60deg, #e766f3, #f14579, #88e0f7, #5dffc9);
-    background-size: 400% 400%;
-    animation: gradient 8s ease infinite;
-
-    
-
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    } */
-
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -68,7 +51,7 @@ code {
   margin: 0 0 20px 0;
   width: 270px;
   padding: 10px 35px;
-  background-color: rgb(233, 233, 233);
+  background-color: rgb(231, 231, 231);
   border: 2px solid black;
   box-shadow: 5px 5px 0 0;
 }
@@ -96,12 +79,6 @@ code {
 
 /* SENT MESSAGES */
 
-/* .sent-message-big-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
 
 .sent-message-container {
   display: flex;
@@ -112,25 +89,43 @@ code {
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   box-shadow: 5px 5px 0 0;
-
+  overflow-wrap: break-word;
 }
 
 .like-counter-section {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
 }
 
-
-/* .sent-message-text {
-  resize: none;
-  margin-bottom: 20px;
-} */
+.button-and-likes {
+  display: flex;
+  
+}
 
 .like-btn {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  margin-right: 20px;
+  margin-top: 5px;
+  margin-right: 8px;
   border: none;
   background-color: pink;
   cursor: pointer;
+}
+
+.date-container {
+margin-top: 13px;
+}
+
+.date {
+  display: inline;
+  font-size: 12px;
+  color: rgb(155, 155, 155);
+}
+
+.hearts-amount {
+  font-size: 15px;
+  color: rgb(155, 155, 155);
 }
