--- a/code/src/index.css
+++ b/code/src/index.css
@@ -21,6 +21,17 @@ body {
 	--clr-accent: #ffadad;
 }
 
+.header{
+  background-color: var(--clr-white);
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index:1;
+}
+
+
+
 .title {
   text-transform: uppercase;
   font-size: 54px;
@@ -30,6 +41,7 @@ body {
   border: none;
   border-radius: 20px;
   animation: bgcolor 5s infinite;
+
 }
 
 @keyframes bgcolor {
