--- a/code/src/index.css
+++ b/code/src/index.css
@@ -84,9 +84,7 @@ textarea, textarea:active {
 }
 
 textarea,
-textarea:active,
-button,
-button:active {
+textarea:active {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
