--- a/code/src/index.css
+++ b/code/src/index.css
@@ -39,7 +39,8 @@ h1 {
 
 h2 {
   font-size: 10px;
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 3;
+  overflow-wrap: break-word;
 }
 
 p {
@@ -61,6 +62,11 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+.liked {
+  background-color: pink;
+}
+
 
 .send-button {
   background-color: pink;
@@ -90,3 +96,4 @@ span {
   grid-template-columns: 1fr;
   row-gap: 30px;
 }
+
