--- a/code/src/index.css
+++ b/code/src/index.css
@@ -68,6 +68,10 @@ font-family: "Roboto Mono", monospace;
 .heart-button {
 border-radius: 100px;
 padding: 7px;
-background-color: rgb(245, 109, 145);
+background-color: rgb(141, 141, 170, 0.65);
 border: 0;
+}
+
+.clicked {
+  background-color: rgb(245, 109, 145);
 }
