--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@400;500;700&display=swap');
 
 * {
-    margin: 0;
+    margin-top: 2vw;
     padding: 0;
     box-sizing: border-box;
    -webkit-box-sizing: border-box;
@@ -13,8 +13,13 @@
    font-weight: 500;
 }
 
-h3 {
-  font-size: 12px;
+body {
+  background: linear-gradient(to left, #FFDCDC 0%, #FF9292 100%);
+}
+
+h2 {
+  font-size: 13px;
+  padding-bottom: 2vw;
 }
 
 p {
@@ -26,22 +31,40 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 60vw;
   margin: 0 auto
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  padding: 1vw;
+  padding: 2vw;
   border: grey 2px solid;
   box-shadow: 5px 5px black;
   word-break: break-word;
-  /* max-width: 80%; */
+  max-width: 500px;
   width: 80%;
-  min-height: 15vw;
-  max-height: auto;
+  height: auto;
   margin-bottom: 5vw;
+  background-color: white;
+}
+
+.grey {
+  background-color: #EFEFEF;
+}
+
+.form-button {
+  font-size: 12px;
+  border-radius: 40px;
+  border: none;
+  background-color: pink;
+  width: fit-content;
+  padding: 2vw;
+}
+
+
+textarea {
+  height: 70px;
+  margin-bottom: 2vw;
 }
 
 .bottom-card-container {
@@ -59,18 +82,25 @@ section {
   align-items: center;
   gap: 0.5vw;
 }
+
 .likes-button {
+  display: flex;
+  background-color: #EFEFEF;
   border-radius: 50%;
+  margin-bottom: 2vw;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 1.5vw;
   border: none;
   width: 7vw;
   height: 7vw;
 }
 
-.heart-icon {
-  width: 3vw;
+.clicked {
+  background-color: pink;
 }
 
-/* .time-stamp {
-  display: flex;
-} */
+.heart-icon {
+  font-size: 4vw;
+}
 
