--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,13 +22,16 @@ code {
   margin: auto;
 }
 
-.thoughts-container {
-  width: 60vw;
+
+/* new thoughts */
+
+.new-thoughts {
+    background-color: rgb(242,240,240);
 }
 
 .thoughts-message {
+  width: 50vw;
   border-style: solid;
-  /* margin: 5px; */
   margin-bottom: 30px;
   padding: 0 10px 15px 10px;
   display: flex;
@@ -46,12 +49,32 @@ code {
 
 }
 
+
+.submit-btn {
+  background-color: rgb(255,173,173);
+  cursor: pointer;
+  border-radius: 30px;
+  border: none;
+  padding: 10px 10px;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+}
+
+
+/* recent thoughts */
+
 .heart-btn {
   width: 45px;
   height: 45px;
   border-radius: 50%;
   background-color: rgb(234,234,234);
   border-style: none;
+  cursor: pointer;
+}
+
+.heart-btn:hover {
+  background-color: rgb(255,173,173);
 }
 
 .times-liked, .time-txt {
