--- a/code/src/index.css
+++ b/code/src/index.css
@@ -136,3 +136,15 @@ margin-top: 13px;
  .loading {
    width: 10%;
  }
+
+ @media (min-width: 376px) and (max-width: 820px) {
+   .loading {
+     width: 25%;
+   }
+ }
+
+ @media (max-width: 375px) {
+   .loading {
+     width: 40%;
+   }
+ }
