--- a/code/src/index.css
+++ b/code/src/index.css
@@ -75,3 +75,10 @@ border: 0;
 .clicked {
   background-color: rgb(245, 109, 145);
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
