--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 * {
   padding: 0;
-  margin: 0;
+  margin: auto;
 }
 
 
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Inconsolata', monospace;
-  background-color: #f9d9d9;
+  background-color: #fff1f1;
 
 }
 
@@ -21,37 +21,41 @@ code {
     monospace;
 }
 
-footer{
-  background-color: blueviolet;
-  margin-top:20px;
-  margin-bottom:20px;
-  padding:20px;
-  margin-top: auto;
-}
-
 button{
-  background-color: #ee9e9e;
+  background-color: rgb(244,172,172);
+  border:none;
 }
 
 .container{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 15%;
 }
+
+.form-container, .comment-container{
+  width: 300px;
+  box-shadow: 7px 7px;
+  border-style: solid;
+  border-width: thin;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.comment-container{
+  margin-top: 30px;
+background-color: #ffffff;
+height: 160px;
+}
+
 
 /*THOUGHTFORM*/
 
 .form-container{
-  width: 500px;
-    margin: 200px;
-    box-shadow: 7px 7px;
-    border-style: solid;
-    border-width: thin;
-    display: flex;
-    flex-direction: column;
-background-color: #f0f0f0;
- height: 275px;
+  margin-bottom: 30px;
+  margin-top: 50px;
+  background-color: #f0f0f0;
+  height: 275px;
 }
 
 .happy-label{
@@ -94,30 +98,67 @@ display: block;
 
 /*THOUGHTFORM*/
 
-.comment-container{
-  width: 500px;
-  margin-left: 200px;
-  box-shadow: 7px 7px;
-  border-style: solid;
-  border-width: thin;
-  display: flex;
-  flex-direction: column;
-background-color: #ffffff;
-height: 160px;
-}
+
 
 .thought-text{
   height: 100px;
-padding: 15px;
+  width:280px;
+  padding: 20px;
+  font-size: 14pt;
 }
 
+
+
 .like-box{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+
+.like-box, .like {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
 }
 
 .like-button{
-  border-radius: 50px;
-  padding: 10px;
+  background-color: #ee9e9e;
+  border-radius: 50%;
+  padding: 12px;
+  margin-left: -30px;
+  margin-bottom: 12px;
+  height: 42px;
+
 }
+
+.like-counter{
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.time-tracker{
+  color: rgb(126, 123, 123);
+  margin-left: 70px;
+}
+
+.like-button:hover {
+	background-color: #cc8383;
+  }
+
+
+  
+  .like-button:focus {
+    background-color: rgb(234,234,234)
+    }
+
+    @media screen and (min-width: 500px){
+      .form-container, .comment-container{
+        width: 450px;
+      }
+      .thought-text{
+        width:380px;
+      }
+      .time-tracker{
+        margin-left: 200px;
+      }
+
+    }
