--- a/code/src/index.css
+++ b/code/src/index.css
@@ -84,7 +84,8 @@ h2 {
 
 .message-length-error {
   color: var(--clr-error);
-  font-size: 14px;
+  font-size: 16px;
+  margin-top: 12px;
 }
 
 .text-input {
