--- a/code/src/index.css
+++ b/code/src/index.css
@@ -39,6 +39,7 @@ button {
 border-radius: 200px;
 background-color: rgba(255, 60, 0, 0.521);
 border: none;
+cursor: pointer;
 }
 
 input {
@@ -71,6 +72,7 @@ input {
 }
 .message {
   width: 100%;
+  word-wrap: break-word;
 }
 
 
@@ -97,11 +99,52 @@ input {
   background-color: rgba(204, 146, 255, 0.349);
   height: 2.7rem;
 width: 2.7rem;
+font-size: 1.3rem;
 }
 
 .notLikedClass {
-  background-color: rgb(174, 174, 174);
+  background-color: rgba(174, 174, 174, 0.392);
   height: 2.7rem;
   width: 2.7rem;
+  font-size: 1.2rem;
+}
+
+.charactersOK {
+  color: black;
+}
+
+.charactersNOTOK {
+  color: red;
+  background-color: rgba(255, 0, 0, 0.16);
+
+}
+
+
+@media all and (max-width: 450px) {
+
+body {
+  /* background-color: red; */
+}
+p {
+  margin: 0;
+}
+
+.thoughts-wrapper {
+  margin: 2.5rem;
+}
+form {
+  width: 100%;
+  height: 230px;
+}
+.post-card {
+  width: 100%;
+}
+
+.date {
+  width: 100%;
+}
+.submit-btn {
+  width: 100%;
+}
 
 }
