--- a/code/src/index.css
+++ b/code/src/index.css
@@ -23,16 +23,18 @@ code {
 }
 
 .createForm {
+  margin-top:50px;
   box-shadow: 10px 10px 0 0px black;
+  background: #f2f0f0;
 }
 
-.createform textarea {
+.createForm textarea {
   width: 100%;
-  margin-top: 10px
+  margin-top: 12px
 }
 
 .createFormFooter {
-  margin-top: 10px;
+  margin-top: 12px;
 }
 
 .thoughtLengthCounter {
@@ -42,10 +44,57 @@ code {
 .submitFormButton {
   background: #ffadad;
   color: black;
-  padding: 10px;
-  border-radius: 30px
+  padding: 10px 15px;
+  border-radius: 30px;
+  border: 0px;
+  font-size:12px;
+  display: flex;
+  align-items: center;
 }
 
 .thought {
   margin-top:50px
+}
+
+.thought h4 {
+  margin-top: 5px;
+  margin-bottom:0px;
+}
+
+.heartButton {
+  font-size: 12px;
+}
+
+.numberOfHearts {
+  color: grey;
+  margin-left: 10px;
+}
+
+.thoughtFooter {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-top: 35px;
+}
+
+.thoughtRelativeDate {
+  color: grey;
+  opacity: 70%;
+  font-size: 12px;
+}
+
+.heart {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+}
+
+.heartButton button {
+  border: 0px;
+  border-radius: 100%;
+  padding: 10px;
+  background-color: #efefef;
 }
